# em_sl_finetuning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
em/: train_model_em.sh  training_datasets.py  training_lora.py  validate.py
em/templates/: lora_finetune_template.json  lora_finetune_template_match_sl.json
em_new/: pyproject.toml  train_model_em.sh  training_lora.py
sl/: run_finetuning_job.py  sl_config.py  train_model_sl.sh
sl/sl/: config.py
sl/sl/finetuning/: data_models.py  services.py
sl/sl/llm/: data_models.py
