[project]
name = "em-sl-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "datasets>=4.6.1",
    "loguru>=0.7.3",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers==4.54.0",
    "trl==0.19",
    "unsloth>=2025.7.2",
]
