[project]
name = "em-new"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "datasets>=4.6.1",
    "loguru>=0.7.3",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=4.56.2",
    "trl==0.29",
]

[tool.setuptools]
py-modules = []